--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "sequelize-cli": "^6.6.2"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server.js",
+    "start": "cross-env NODE_ENV=production nodemon server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "test": "cross-env NODE_ENV=test jest"
+    "test": "cross-env NODE_ENV=test nodemon server.js"
   }
 }
